# aetherwave

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  add_demo_image.sh  check_environment.py  docker-compose.yml  quick_build_sdl2.sh  readme.md  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: cpp-build.yml  python-lint-test.yml
assets/: README.md
assets/images/: README.md
config/: config.yaml  example_metadata.json  sample_metadata.json  schema.yaml  theme_cache.json  themes.yaml
demos/: content_driven_aesthetics_demo.py  working_gallery_demo.py
docs/: ARCHITECTURE.md  FEATURE_ROADMAP.md  PHASE3_COMPLETION.md  QT_MIGRATION_SUMMARY.md  SETUP.md
mcp_server/: README.md  package.json
scripts/: cpp-run.sh  cpp-setup.sh  dev-setup.sh  dev-stop.sh  fe-run.sh  qt-run.sh  setup_openframeworks.sh  start_display.sh  start_service.sh  test-phase4b2.sh  unity-app-run.sh  unity-build-run.sh  unity-build-verify.sh  unity-lint.sh  unity-run.sh  unity-setup.sh  unity-verify.sh  verify-app.sh
src/api/: bento_optimizer.py  classify.py  content_theme_analyzer.py  main.py
src/api/config/: test_image_metadata.json
src/cpp/: AetherwaveApp.h  DebugLogger.cpp  DebugLogger.h  DisplayEngine.cpp  DisplayEngine.h  LayoutEngine.cpp  LayoutEngine.h  ThemeManager.cpp  ThemeManager.h  ThemeManagerSDL.cpp  ThemeManagerSDL.h  app.cpp  visual_app.cpp  visual_sdl.cpp  visual_simple.cpp
src/fe/: api_client.py  config_manager.py  gallery_window.py  main.py  requirements.txt  tile_layout_manager.py
src/python/: __init__.py  advanced_classifier.py  bento_view.py  classify.py  gallery_window.py  image_widget.py  main.py  requirements.txt
src/python/config/: sample_metadata.json
src/python/qt_app/: bento_gallery.py
src/qt/: gallery_window.py  main.py
src/shared/: Config.cpp  Config.h
src/ui/: README.md
src/unity/: README.md
src/unity/Aetherwave/Assets/: UniversalRenderPipelineGlobalSettings 1.asset  UniversalRenderPipelineGlobalSettings.asset
src/unity/Aetherwave/Assets/Scenes/: Gallery.unity  TestGallery.unity
src/unity/Aetherwave/Assets/Scripts/: APITestGallery.cs  AetherwaveAssembly.asmdef  AetherwaveGallery.cs  EmergencyGallery.cs  GalleryStartup.cs  GalleryStartup.cs.disabled  MinimalGallery.cs  ScriptExecutionProof.cs  StartupDebugger.cs  SunsetKiller.cs  UltimateSunsetKiller.cs
src/unity/Aetherwave/Assets/Scripts/Core/: ThemeProfile.cs
src/unity/Aetherwave/Assets/Scripts/Editor/: AetherwaveEditor.asmdef  AutoBuild.cs  AutomatedBuild.cs  AutomatedBuild.cs.disabled  SceneCleanup.cs  SceneSetup.cs  SceneSetup.cs.disabled
src/unity/Aetherwave/Assets/Scripts/Managers/: CleanImageDisplayManager.cs  ImageDisplayManager.cs  MultiMonitorController.cs  PythonAPIClient.cs  ThemeManager.cs
src/unity/Aetherwave/Assets/StreamingAssets/: Images
src/unity/Aetherwave/ProjectSettings/: ProjectSettings.asset
tests/: __init__.py
tests/python/: __init__.py  test_advanced_classification.py  test_content_theme_analyzer.py  test_enhanced_api.py  test_metadata.py
